# fingeit

./: .gitignore  README.md  preprocess.ipynb  pyproject.toml
infra/: hardware_requesting.py  startup_server.py
notebooks/: combine_datasets.ipynb  combine_train_test.ipynb  data_processing.ipynb  evaluation.ipynb  evaluation_en.ipynb  evaluation_final.ipynb  evaluation_final_en.ipynb  evaluation_nl.ipynb  get_test_sentiment_analysis.ipynb  prepare_data.ipynb  preprocess.ipynb
src/: config.ini  data_downloader.py  dataset_push.py  main.py  post_proces.py  pre_process.ipynb  translation_formatter.py  translation_service.py  translations_fingpt.py  utils.py
src/data_processing/: README.md  config.ini  config.py  construct_messages.py  data_downloader.py  post_process.py  prompters.py  publish_dataset.py  translation_formatter.py  translation_service.py  translations_fingpt.py  translators.py  utils.py
src/data_processing/config/: config.ini  config.py
src/data_processing/translation/: pre_process.py  translator.py
src/evaluation/: README.md  answer_extractor.py  answer_extractor_en.py  evaluation_convfinqa.py  evaluator_base.py  evaluator_convfinqa.py  evaluator_finred.py  evaluator_headline.py  evaluator_ner.py  evaluator_ner_cls.py  evaluator_sentiment.py  file_access.py  llm_extractor.py  llm_extractor_en.py
src/training/: README.md
src/training/sft/: config_qlora.yaml
test/: test_utils.py
test/data_processing/: test_pre_process.py
