[tool.poetry]
name = "fin-geit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
datasets = "^2.16.1"
transformers = "4.32.0"
peft = "0.5.0"
utils = "^1.0.2"
sentencepiece = "^0.1.99"
accelerate = "^0.26.1"
torch = "^2.2.0"
bitsandbytes = "^0.42.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
